# sdk-rust

./: .gitignore  BUILDING.md  CHANGELOG.md  Cargo.toml  README.md
src/: auth.rs  client.rs  error.rs  lib.rs  types.rs  ws.rs
