[package]
name = "ogmara-sdk"
version = "0.3.2"
edition = "2021"
authors = ["Ogmara Contributors"]
license = "MIT"
description = "Rust SDK for the Ogmara decentralized chat and news platform"
repository = "https://github.com/Ogmara/sdk-rust"
keywords = ["ogmara", "klever", "chat", "decentralized", "sdk"]

[dependencies]
# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Async runtime
tokio = { version = "1.50", features = ["rt", "sync", "time", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"

# Cryptography (same as L2 node — Klever ecosystem)
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
sha3 = "0.10"
bech32 = "0.11"
rand = "0.8"
base64 = "0.22"

# Error handling
thiserror = "2.0"

# Utilities
hex = "0.4"
tracing = "0.1"
url = "2.5"

[dev-dependencies]
tokio = { version = "1.50", features = ["full", "test-util"] }
